--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -3,6 +3,6 @@
   <%= f.association :movie %>
   <div class="d-flex justify-content-center">
     <%= f.button :submit, class: "btn btn-primary mx-3" %>
-    <%= link_to "List details", list_path(@list), class: "btn btn-secondary mx-3"%>
+    <%= link_to "Return to list", list_path(@list), class: "btn btn-secondary mx-3"%>
   </div>
 <% end %>
