--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -43,11 +43,15 @@
 <div class="container p-5" >
 <%= link_to "Add movie to this list", new_list_bookmark_path(@list), class: "btn btn-primary m-2" %>
 <%= link_to "Return to Watch List", lists_path, class: "btn btn-secondary m-2" %>
-  <div class="cards">
+  <div class = "cards">
     <% @movies.each do |movie| %>
-    <div class="card-category m-2" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://plus.unsplash.com/premium_photo-1710522706751-c2f0c76cc5fd?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)">
-      <%= movie.title %>
-    </div>
-    <% end %>
+      <div class="card-product m-2">
+      <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
+      <div class="card-product-infos">
+        <h2><%= movie.title %></h2>
+        <p>bookmark comment </p>
+      </div>
+     </div>
+     <% end %>
   </div>
 </div>
